--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -34,29 +34,8 @@
   = link_to 'Call Management', identifiers_path
   &nbsp;
   = link_to 'Equipment', equipments_path
-  %p
-  Available as Admin Serices Only (Deprecated)
-  %p
-  = link_to 'Engagements', engagements_path
   &nbsp;
-  = link_to 'Invoices', dockets_path
-  &nbsp;
-  = link_to 'Jobs', jobs_path
-  &nbsp;
-  = link_to 'Permits', permits_path
-  &nbsp;
-  = link_to 'Projects', projects_path
-  &nbsp;
-  = link_to 'Quotes', quotes_path
-  &nbsp;
-  = link_to 'Requirements', requirements_path
-  &nbsp;
-  = link_to 'Reservations', reservations_path
-  &nbsp;
-  = link_to 'Schedules', schedules_path
-  &nbsp;
-  = link_to 'Solutions', solutions_path
-  
+  = link_to 'Lane Management (Use Cases)', addresses_path
 
 %center
 
