--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,36 +1,48 @@
-%p#notice= notice
-= render '/layouts/people_header'
-%h1 People
 
-%p 
-  = @people.count 
-  listed
+.container-fluid
 
-%table
-  %thead
-    %tr
-      %th First name
-      %th Last name
-      %th Company
-      %th Title
-      %th Available
-      %th Available on
-      %th Ok to contact
-      %th Active
-      %th{:colspan => "3"}
-  %tbody
-    - @people.each do |person|
-      %tr
-        %td= person.first_name
-        %td= person.last_name
-        %td= person.company_name
-        %td= person.title
-        %td= person.available
-        %td= person.available_on.to_s
-        %td= person.OK_to_contact
-        %td= person.active
-        %td= link_to 'Show', person
-        %td= link_to 'Edit', edit_person_path(person)
-        %td= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New Person', new_person_path
+  %h1 People  
+
+  .row
+
+    .col-2
+
+      = render "search_panel", locals: {q: @q}
+
+    .col-6
+      %h3 People
+      = @people.count 
+      listed
+      %hr
+    
+      
+        %table.table.table-striped
+          %thead
+            %tr
+            %th First name
+            %th Last name
+            %th Company
+            %th Title
+            %th Available
+            %th Available on
+            %th Ok to contact
+            %th Active
+            %th{:colspan => "3"}
+          %tbody
+            - @people.each do |person|
+              %tr
+                %td= person.first_name
+                %td= person.last_name
+                %td= person.company_name
+                %td= person.title
+                %td= person.available
+                %td= person.available_on.to_s
+                %td= person.OK_to_contact
+                %td= person.active
+                %td= link_to 'Show', person
+                %td= link_to 'Edit', edit_person_path(person)
+                %td= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' }
+
+      %br/
+
+  = link_to 'New Person', new_person_path
