WIP on People Show.  This is a third form of association since not polymorphic itself.  Company has_many people, peoaple belongs to company and also has_many addresses and has_many identifiers.  This may be too complex to manage

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,11 +8,14 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   
+- flash.each do |name, msg|
+  = content_tag :div, msg, class: name
 
 -#
 -# Bootstrap grid for all containers
 -#  
 .container-fluid
+
   .row
     .col
       = render '/shared/header'
