--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -33,7 +33,7 @@
   %p
   = link_to 'Call Management', identifiers_path
   &nbsp;
-  = link_to 'Equipment', equipments_path
+  = link_to 'Equipment', equipment_index_path
   &nbsp;
   = link_to 'Lane Management (Use Cases)', addresses_path
 
