--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -7,37 +7,56 @@
           %li= message
       
 
-  .field
-    = form.label :first_name
-    = form.text_field :first_name
+  .form-group
+    = form.label :first_name, "First Name", class: "col-md-4 control-label"
+    .col-md-8
+      = form.text_field :first_name, class: "form-control"
+
+  .form-group
+    = form.label :last_name, "Last Name", class: "col-md-4 control-label"
+    .col-md-8
+      = form.text_field :last_name, class: "form-control"
+
+  .form-group
+    = form.label :title, "Title", class: "col-md-4 control-label"
+    .col-md-8
+      = form.text_field :title, class: "form-control"
+
+  .form-group
+    = form.label :available, "Available", class: "col-md-4 control-label"
+    .col-md-8
+      = form.radio_button(:available, true)
+      = form.label(:available, "Yes", value: true)
+      &nbsp;
+      = form.radio_button(:available, false)
+      = form.label(:available, "No", value: false)
+
+  .form-group
+    = form.label :available_on, "When Available", class: "col-md-4 control-label"
+    .col-md-8
+      -#= form.text_field :available_on, class: "form-control"
+      = form.datetime_select :available_on
+      
 
 
-  .field
-    = form.label :last_name
-    = form.text_field :last_name
-
-  .field
-    = form.label :title
-    = form.text_field :title
-
-  .field
-    = form.label :available
-    = form.check_box :available
+    .form-group
+    = form.label :OK_to_contact, "OK to Contact", class: "col-md-4 control-label"
+    .col-md-8
+      = form.radio_button(:OK_to_contact, true)
+      = form.label(:OK_to_contact, "Yes", value: true)
+      &nbsp;
+      = form.radio_button(:OK_to_contact, false)
+      = form.label(:OK_to_contact, "No", value: false)
 
 
-  .field
-    = form.label :available_on
-    = form.datetime_select :available_on
-
-
-  .field
-    = form.label :OK_to_contact
-    = form.check_box :OK_to_contact
-
-  .field
-    = form.label :active
-    = form.check_box :active
-
+    .form-group
+    = form.label :active, "Active", class: "col-md-4 control-label"
+    .col-md-8
+      = form.radio_button(:active, true)
+      = form.label(:active, "Yes", value: true)
+      &nbsp;
+      = form.radio_button(:active, false)
+      = form.label(:active, "No", value: false)
 
   = render :partial => "shared/address_form", locals: {form: form}
 
