--- a/app/views/people/_search_panel.html.haml
+++ b/app/views/people/_search_panel.html.haml
@@ -5,6 +5,8 @@
     = f.text_field :last_name_cont, class: 'form-control'
     = f.label :first_name
     = f.text_field :first_name_cont, class: 'form-control'
+    = f.label :title
+    = f.text_field :title_cont, class: 'form-control'
 
     = f.submit class: 'btn btn-primary'
     .btn
