--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,7 +1,7 @@
 
 .container-fluid
 
-  %h1 People  
+  %h1 Finder  
 
   .row
 
@@ -23,11 +23,7 @@
             %th Last name
             %th Company
             %th Title
-            %th Available
-            %th Available on
-            %th Ok to contact
-            %th Active
-            %th{:colspan => "3"}
+            
           %tbody
             - @people.each do |person|
               %tr
@@ -35,10 +31,7 @@
                 %td= person.last_name
                 %td= person.company_name
                 %td= person.title
-                %td= person.available
-                %td= person.available_on.to_s
-                %td= person.OK_to_contact
-                %td= person.active
+                
                 %td= link_to 'Show', person
                 %td= link_to 'Edit', edit_person_path(person)
                 %td= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' }
