--- a/app/views/people/edit.html.haml
+++ b/app/views/people/edit.html.haml
@@ -3,7 +3,9 @@
  
 = @person.company_name
 %hr/
-= render 'form', person: @person
+
+=render 'form'
+-#= render 'form', person: @person
 = link_to 'Show', @person
 |
 = link_to 'Back', people_path
