--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -67,3 +67,7 @@
 = link_to 'Edit', edit_person_path(@person)
 &nbsp;
 = link_to 'Back', people_path
+&nbsp;
+= link_to new_company_path, class: 'btn btn-secondary' do
+  %i.glyphicon.glyphicon-plus
+  Companies
