--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -6,11 +6,11 @@
 
           
   %p.floatright
-  = link_to "Dashboard", dashboard_path
+  -#= link_to "Dashboard", dashboard_path
   &nbsp;
-  = link_to "Logon or Register", admin_root_path
+  -#= link_to "Logon or Register", admin_root_path
   &nbsp;
-  = link_to 'Home', root_path
+  -#= link_to 'Home', root_path
   
   %br
   %br
