--- a/app/views/people/edit.html.haml
+++ b/app/views/people/edit.html.haml
@@ -1,10 +1,12 @@
 %h1 Edit Person
-= @person.address
+
+= @person.first_name
+= @person.last_name
  
 = @person.company_name
 %hr/
 
-=render 'form'
+= render 'form'
 -#= render 'form', person: @person
 = link_to 'Show', @person
 |
