ActiveAdmin removed (although strays and fragments may exist.  Start still failing on Heroku.  Need to do a select from Company names for Equipment.

--- a/app/views/people/edit.html.haml
+++ b/app/views/people/edit.html.haml
@@ -6,8 +6,8 @@
 = @person.company_name
 %hr/
 
-= render 'form'
--#= render 'form', person: @person
+= render 'form', locals: {person: @person}
+
 = link_to 'Show', @person
 |
 = link_to 'Back', people_path
