--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -6,7 +6,7 @@
   = @person.display_address
   = link_to 'edit address', edit_person_address_path(@person, @address)
 
-  = render 'address_modal'
+  -#= render 'address_modal'
   %p
 
   = render "identifiers/contacts_for"
