WIP to clean up, some path damage, minor.  Active Admin has a remove command, used that; needed to follow-on with odds and ends such as in assets and initializers.  Removed remnants of Kalimari and the remaining Ransack featurs seem to be OK. Be nice if this would start on Heroku!  Stay guned.

--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -5,7 +5,7 @@
 
 %h1 Listing addresses
 
-= paginate @addresses
+-#= paginate @addresses
 //= paginate @addresses, :left => 1, :right => 3
 
 %table
