Error: Unitialized Constant InheritedResources is caused by inheriting from InheritedResources in first line of the controller involved.  Chang this back to ApplicationController.  This happened once the routes.rb resource definitions were made shallow and explicit.

--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -4,7 +4,7 @@
 
 %p
   = @person.display_address
-  = link_to 'edit address', edit_person_address_path(@person, @address)
+  -#= link_to 'Edit Address', edit_person_address_path(@person)
 
   -#= render 'address_modal'
   %p
