--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -4,7 +4,8 @@
 
 %p
   = @company.display_address
-  = link_to 'edit address', edit_address_path
+
+  = link_to 'edit address', edit_address_path(@company)
     
   %hr
  
