--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,7 +6,7 @@
   %h2 PoC and UX research version
   
   %h3 
-    = link_to 'Admin Dashboard', admin_dashboard_path
+    = link_to 'Admin Dashboard', dashboard_path
     &nbsp;
     = link_to "Fr8.Network", "https://Fr8.network", :target => "_blank"
 
