--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -14,15 +14,15 @@
 
   = link_to 'Addresses', addresses_path
   &nbsp;
+  = link_to 'Agreement Conditions', conditions_path    
+  &nbsp;
   = link_to 'Carriers', companies_path
   &nbsp;
-  = link_to 'Distribution Centers', companies_path  
+  = link_to 'Contacts (coming along)', identifiers_path
   &nbsp;
-  = link_to 'Contacts', identifiers_path
+  = link_to 'Distribution Centers (coming along)', companies_path  
   &nbsp;
   = link_to 'People', people_path
-  &nbsp;
-  = link_to 'Agreement Conditions', conditions_path  
   &nbsp;
   = link_to 'Tip Sites', tips_path
 
