--- a/app/views/tips/index.html.haml
+++ b/app/views/tips/index.html.haml
@@ -1,27 +1,45 @@
-%h1 List of Tips
+.container-fluid
 
-%table
-  %thead
-    %tr
-      %th Name
-      %th Company
-      %th Fee
-      %th Fire ant risk level
-      %th
-      %th
-      %th
+  %h1 Finder
 
-  %tbody
-    - @tips.each do |tip|
-      %tr
-        %td= tip.name
-        %td= tip.company_id
-        %td= tip.fee
-        %td= tip.fire_ant_risk_level
-        %td= link_to 'Show', tip
-        %td= link_to 'Edit', edit_tip_path(tip)
-        %td= link_to 'Destroy', tip, method: :delete, data: { confirm: 'Are you sure?' }
+  .row
 
-%br
+    .col-2
 
-= link_to 'New Tip', new_tip_path
+      = render "search_panel", locals: {q: @q}
+          
+
+    .col-6
+      %h3 Tip Sites
+      = @tips.count 
+      listed
+      %hr
+
+      %table.table.table-striped
+
+
+        %thead
+          %tr
+            %th{align: 'left'}Name
+            %th{align: 'left', valign: 'top'} Company
+            %th{align: 'left', width: '32'} Fee
+            %th Risk Level
+            
+
+        %tbody
+          - @tips.each do |tip|
+            %tr
+          
+              %td{align: 'left', width: '224'}= tip.name
+              %td{align: 'left', width: "64"}= 'tip.company'
+              %td= tip.fee
+              %td= tip.fire_ant_risk_level
+               
+              %td= link_to 'Show', tip
+              %td= link_to 'Edit', edit_tip_path(tip)
+              %td= link_to 'Destroy', tip, method: :delete, data: { confirm: "Are you sure you want to delete #{tip.name}?" } 
+      %br
+
+      = link_to new_tip_path, class: 'btn btn-secondary' do
+        %i.glyphicon.glyphicon-plus
+          New Tip Site
