--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -18,9 +18,9 @@
   &nbsp;
   = link_to 'Carriers', companies_path
   &nbsp;
-  = link_to 'Contacts (coming along)', identifiers_path
+  = link_to 'Contacts', identifiers_path
   &nbsp;
-  = link_to 'Distribution Centers (coming along)', companies_path  
+  = link_to 'Equipment', equipment_index_path
   &nbsp;
   = link_to 'People', people_path
   &nbsp;
@@ -30,11 +30,9 @@
   %p
   Under Development
   %p
-  = link_to 'Call Management', identifiers_path
+  = link_to 'Calls', identifiers_path
   &nbsp;
-  = link_to 'Equipment', equipment_index_path
-  &nbsp;
-  = link_to 'Lane Management (Use Cases)', addresses_path
+  = link_to 'Lanes', addresses_path
 
 %center
 
