--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -1,59 +1,39 @@
 
--# To allow for Master lists, essentialy orphans when retrieved as entire collection
--# Title depends on type of list
--if @parent.nil?
-  %h1 Contacts Master List
--else
-  Contacts for #{@parent.name}
+.container-fluid
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th Kind
-      %th Contact Name
-      %th{align: 'center'} Tier
-      %th Name
-      %th Value
-      %th Show
-      %th Edit
-      %th Delete
-      
-      
+  %h1 Finder
 
-  %tbody
-    - @identifiers.each do |f|
+  .row
 
-      %tr
-        %td= f.identifiable_type
-        %td= f.display_parent_name
-        %td{align: 'center'}
-          = f.rank
-        %td= f.name
-        %td= f.value
-        %td= link_to 'Show', f
-        %td= link_to 'Edit', edit_identifier_path(f)
-        %td= link_to 'Destroy', f, method: :delete, data: { confirm: "Are you sure you want to delete #{f.name}?" }
+    .col-2
 
-%br
+      = render "search_panel", locals: {q: @q}
+          
+    .col-6
+      %h3 Contacts
+      = @identifiers.count 
+      listed
+      %hr
 
--# If this is a Master List, no #new operation is allowed
--# [TODO] clean this up using partials
--unless @parent.nil?
-  = link_to 'New Identifier', new_company_identifier_path(@parent) 
+      %table.table.table-striped
 
 
--# Find the way back to base or parent
--# [TODO] some of this section seems to be residual croft
-- if @identifiers[0].nil?
-  = link_to "Back to Base", companies_path
-- else
-  - case @identifiers[0].identifiable_type
-    - when "Company"
-      = link_to 'Back ', company_path(:id => @identifiers[0].identifiable_id)   # W O R K S
-    - else
-      = link_to 'Home', root_path
+        %thead
+          %tr
+            %th Name
+            %th Value
+            %th Rank or Priority
+            
 
+        %tbody
+          - @identifiers.each do |iden|
+            %tr
+              %td{align: 'left', width: '224'}= link_to iden.identifiable.name, company_path(iden.identifiable_id)
+              %td{align: 'left', width: '224'}= iden.value
+              %td{align: 'left', width: "64"}= iden.rank
 
-
-
-
+            
+              %td= link_to 'Show', iden
+              %td= link_to 'Edit', edit_identifier_path(iden)
+              %td= link_to 'Destroy', address, method: :delete, data: { confirm: "Are you sure you want to delete #{iden}?" } 
+      %br
