--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -10,7 +10,7 @@
   &nbsp;
   -#= link_to "Logon or Register", admin_root_path
   &nbsp;
-  -#= link_to 'Home', root_path
+  = link_to 'Home', root_path
   
   %br
   %br
