Cleaning up routing for Addresses.  Using 'addressable' to work on back routes, may have eliminated ncaddr named route, but not fully tested.  Looked into sessions, cookies and flash, but none truly appropriate.  Working on uinderstanding how to create routes in code at run time.  That's how to construct the paths since the routes will be available in routes.rb already.

--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -6,8 +6,6 @@
 
 = render 'form'
 
-%table
-  %tr
-    %td{width: 10}
-      = link_to "Back", ncaddr_path(@address.addressable_type)
-    
+      
+%p    
+= link_to 'Back to Address', address_path(@address)
