--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,4 +1,5 @@
 %header 
+
    
   %p.floatleft
   %p.Fr8.Network
@@ -11,6 +12,10 @@
   -#= link_to "Logon or Register", admin_root_path
   &nbsp;
   = link_to 'Home', root_path
+
+  - flash.each do |name, msg|
+    = content_tag :div, msg, class: name
+    %hr
   
   %br
   %br
