Route refinements for the polymophs and People.  Deprecated ncaddr as it simply anticipates a routes based solution. Collections can only be kcreated if they are NOT descendents of parent resources.  Edits are allowed once lineage is established, as are show and DELETE.

--- a/app/views/addresses/show.html.haml
+++ b/app/views/addresses/show.html.haml
@@ -69,5 +69,5 @@
 %nbsp
 = link_to @address.addressable, class: 'btn btn-secondary' do
   %i.glyphicon.glyphicon-plus
-    Return to Company
+    Return
       
