--- a/app/views/identifiers/new.html.haml
+++ b/app/views/identifiers/new.html.haml
@@ -5,4 +5,5 @@
 
 = render 'form'
 
-= link_to 'Back', company_path(@parent)
+= link_to 'Back', company_identifiers(@parent)
+= link_to 'Back to Companies', company_path(@parent)
