--- a/app/views/shared/_people_for.html.haml
+++ b/app/views/shared/_people_for.html.haml
@@ -1,11 +1,11 @@
 
 - if @company.nil?
   
-  Nobody is affiliated yet.
+  No affiliations yet.
   
 - else
   
   - @company.people.each do |p|
     %p
     = p.display_name
-    = link_to 'person...', company_person_path(@company, p)  
+    
