--- a/app/views/identifiers/_contacts_for.html.haml
+++ b/app/views/identifiers/_contacts_for.html.haml
@@ -3,7 +3,7 @@
 - if @identifiers.nil?
   
   Identifiers
-  = link_to 'New Contacts', new_person_identifier(@person)
+  = link_to 'New Contacts', new_person_identifiers(@person)
 
 - else
   
