--- a/app/views/identifiers/new.html.haml
+++ b/app/views/identifiers/new.html.haml
@@ -1,4 +1,4 @@
-%h1 New identifier for #{@parent.name}
+%h1 New identifier for #{@parent.display_name}
 %p
   = @identifier.name
   = @identifier.id
