Addresses#index 505 on addressable_type = 'People' fixed by adding def display name to address.rb.

--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -30,7 +30,7 @@
         %tbody
           - @addresses.each do |addr|
             %tr
-              %td{align: 'left', width: '224'}= link_to addr.addressable.name, company_path(addr.addressable_id)
+              %td{align: 'left', width: '224'}= link_to addr.addressable.display_name, company_path(addr.addressable_id)
               %td{align: 'left', width: '224'}= addr.street_address
               %td{align: 'left', width: "64"}= addr.city
               %td= addr.state
