--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Edit address for:  #{@address.addressable.name}
+%h1 Edit address for:  #{@address.addressable.display_name}
 
 %p
   %b Parent type:
