Routes for Address resources are not being generated properly, but you can flip through things to illustrate concepts.  Especially take care with Addresses that carry the WRONG addressability_type, that is Person that should be Company.

--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -1,6 +1,6 @@
 
 .container_fluid  
-  %h1 Edit address for:  #{@address.addressable.display_name}
+  %h1 Edit address
 
   %p
     %b Parent type:
