--- a/app/views/companies/_search_panel.html.haml
+++ b/app/views/companies/_search_panel.html.haml
@@ -16,3 +16,9 @@
 
     %h5
       = will_paginate
+
+    %p
+
+    = link_to new_company_path, class: 'btn btn-secondary' do
+      %i.glyphicon.glyphicon-plus
+        New Company
