Routes -- define primary resources BEFORE declaring depentents.  All routes to Address seem to be OK now, BUT I still think scope problems cause addresses of People to substitute for Companies.  Careful with this.

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -9,9 +9,7 @@
           = @company.line_of_business
         %p
           = @company.display_address
-          = link_to 'address...', company_addresses_path(@address) -# FAILS any other path
-
-  
+          = link_to 'address...', company_addresses_path(@address)
   
     = render "shared/contacts_for"
 
